# NetDevConfigurator

./: .coverage  .flake8  .gitignore  README  README.md  RESPONSE.txt  alembic.ini  app.docx  device_registry.sql  draft.py  main.py  nosqldbm-11_28_2024__5_41_32_PM.xml  pyproject.toml  requirments-old.txt  requirments-ssh2.txt  requirments.txt  some.filename  Первый полет шаблонизации.txt  Приложение_по_автонастройке_сетевого_оборудования.docx
.backups/: dev2024-12-11_22-01.sql  dev2024-12-11_22-25.sql  dev2024-12-17_09-14.sql  dev2024-12-19_22-45.sql  dev2024-12-20_16-36.sql  dev2024-12-20_17-20.sql  dev2024-12-21_21-12.sql  dev2024-12-23_20-00.sql  dev2025-01-31_14-24.sql  dev2025-02-03_15-22.sql  dev2025-02-14_08-34.sql  dev2025-02-17_16-50.sql  dev2025-02-20_15-10.sql  dev2025-02-20_15-50.sql  dev2025-02-20_17-15.sql  dev2025-02-25_10-02.sql  dev2025-02-25_20-07.sql  dev2025-02-27_17-35.sql  dev2025-03-05_08-49.sql  dev2025-03-14_08-49.sql  dev2025-03-19_23-20.sql  dev2025-03-21_00-14.sql  dev2025-03-21_17-26.sql  dev2025-03-23_19-02.sql  dev2025-03-23_23-33.sql  dev2025-03-24_00-17.sql  dev2025-03-24_17-11.sql  dev20250319_201549.sql  device_registry_11.12.2024.sql  device_registry_11.12.2024_18.51.sql
backups/: dev2024-12-20_22-24.sql  dev2024-12-25_14-16.sql  dev2024-12-26_17-44.sql  dev2024-12-27_14-40.sql  dev2025-01-15_12-15.sql  dev2025-01-15_13-15.sql  dev2025-01-15_13-25.sql  dev2025-01-15_13-43.sql  dev2025-01-15_15-26.sql  dev2025-01-15_19-27.sql  dev2025-01-15_21-40.sql  dev2025-01-17_00-34.sql  dev2025-01-17_20-46.sql  dev2025-01-22_21-40.sql  dev2025-01-24_14-38.sql  dev2025-01-24_15-59.sql  (+1 more)
(+404 files in other folders)
