[tool.poetry]
name = "netdevconfigurator"
version = "0.1.0"
description = ""
authors = ["Shmonov Matvey Vasilievich <meology77@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
ttkwidgets = "^0.13.0"
psycopg2-binary = "^2.9.10"
pyyaml = "^6.0.2"
pyserial = "^3.5"
paramiko = "^3.5.0"
scapy = "^2.6.1"
wrapt-timeout-decorator = "^1.5.1"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
